--- a/pages/result/result.wxml
+++ b/pages/result/result.wxml
@@ -1,9 +1,11 @@
-<view class='page'>
+<view class='page result'>
 <view class='container' style='aligin-items: center'>
  <icon class="section" type="success" size="70"></icon>
  <view class='text_area'>
     <text>查询城市: {{city}}</text>
-    <text>污染等级: {{level}}</text>
+    <text>空气质量等级: {{level}}</text>
+    <text>空气质量指数: {{number}}</text>
+     <text>主要污染物: {{core}}</text>
     <text>更新时间: {{time}}</text>
  </view>
 </view>
